<resources>
    <string name="google_maps_API_key">AIzaSyCLn0wqVq9M3pH4ce918J0T5iHEZvK-ta4</string> <!-- API Key for Google Maps-->
    <string name="app_name">Radius</string>
    <string name="settings">Settings</string>
    <string name="log_out_button">Log Out of My Account</string>
    <string name="radius_logo">Radius Logo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clearAll_label">Clear all</string>

    <!-- Preferences Page Strings -->
    <string name="incognitoKey">incognitoSwitch</string>
    <string name="incognitoTitle">Incognito mode</string>
    <string name="incognitoSumary">If this option is activate, nobody can see you on the map</string>

    <string name="notificationsKey">notificationsCheckbox</string>
    <string name="notificationsTitle">Notifications</string>
    <string name="notificationsSumary">Disable or enable notifications when you receive a message</string>

    <string name="nightModeKey">nightModeSwitch</string>
    <string name="nightModeTitle">Night Mode</string>
    <string name="nightModeSumary">Change the colors of the app for a less bright version</string>

    <string name="logoutKey">logOutButton</string>
    <string name="logoutTitle">Disconnect</string>
    <string name="logoutSumary">You will be redirected to the login page</string>

    <string name="deleteAccountKey">deleteAccount</string>
    <string name="deleteAccountTitle">Delete your account</string>
    <string name="deleteAccountSumary">All your conversations and friends will be deleted</string>

    <!-- create_topic.xml strings -->
    <string name="new_topic">New Topic</string>
    <string name="create_new_topic">Create new topic.</string>
    <string name="new_topic_prompt">Enter a name for yout topic:</string>
    <string name="my_topic">My Topic</string>
    <string name="remove">Remove</string>
    <string name="default_status">Default Status</string>
    <string name="chat_disabled">You can\'t text this user.</string>
</resources>
