<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="General"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SwitchPreference
            android:key="@string/incognitoKey"

            android:title="@string/incognitoTitle"
            android:summary="@string/incognitoSumary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="@string/notificationsKey"
            android:title="@string/notificationsTitle"
            android:summary="@string/notificationsSumary"
            android:defaultValue="true"/>

        <SwitchPreference
            android:key="@string/nightModeKey"

            android:title="@string/nightModeTitle"
            android:summary="@string/notificationsSumary"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Preference
            android:key="@string/logoutKey"
            android:title="@string/logoutTitle"
            android:summary="@string/logoutSumary"/>

        <Preference
            android:key="@string/deleteAccountKey"
            android:title="@string/deleteAccountTitle"
            android:summary="@string/deleteAccountSumary"/>
    </PreferenceCategory>

</PreferenceScreen>